The paragraph description now is aligned correctly

--- a/src/styles/cv.css
+++ b/src/styles/cv.css
@@ -64,11 +64,12 @@
 	justify-content: space-around;
 	align-items: flex-start;
 	text-align: justify;
-	gap: 10px;
+	gap: 20px;
 }
 
 .eduData>p {
 	max-width: 50ch;
+	margin: 0;
 }
 
 .degreeDateAndTitle>p {
